[package]
name = "finalize"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-stream = { version = "0.3.6" }
crossbeam-utils = { version = "0.8.21", default-features = false }
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
bytesize = { path = "../bytesize" }
pin-project-lite = { version = "0.2.16" }
tokio = { version = "1.45.1", default-features = false, features = ["sync", "macros"] }
tracing = { version = "0.1.41", default-features = false }
