[package]
name = "framework"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["listenfd", "sources-utils-tcp-keepalive"]

sources-utils-tcp-socket = []
sources-utils-tcp-keepalive = ["sources-utils-tcp-socket"]
test-util = []
tokio-console = ["console-subscriber", "tokio/tracing"]

[dev-dependencies]
event = { path = "../event", features = ["string_path"] }
proptest = { version = "1.6.0", default-features = false, features = ["std"] }
rand = { version = "0.8.5", default-features = false }
rand_distr = { version = "0.4.3", default-features = false }
testify = { path = "../testify" }
tokio = { version = "1.43.0", default-features = false, features = ["test-util"] }
tokio-test = { version = "0.4.4", default-features = false }
tower-test = { version = "0.4.0", default-features = false }

[dependencies]
async-stream = { version = "0.3.6" }
async-trait = { version = "0.1.85", default-features = false }
backoff = { path = "../backoff" }
buffers = { path = "../buffers" }
bytes = { version = "1.9.0", default-features = false }
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
chrono-tz = { version = "0.10.0", default-features = false, features = ["serde"] }
codecs = { path = "../codecs" }
configurable = { path = "../configurable" }
console-subscriber = { version = "0.4.1", optional = true }
dyn-clone = { version = "1.0.17", default-features = false }
event = { path = "../event" }
# TODO: framework should not exit if any error happened
exitcode = { version = "1.1.2" }
flate2 = { version = "1.0.35" }
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
futures-util = { version = "0.3.31", default-features = false }
glob = { version = "0.3.2", default-features = false }
headers = { version = "0.4.0", default-features = false }
hickory-resolver = { version = "0.24" }
humanize = { git = "https://github.com/f1shl3gs/humanize", default-features = false, features = ["duration", "bytes", "serde"], rev = "3ce391414e9417c36ca386b50ef82e6d2e1882dd" }
hostname = { path = "../hostname" }
http = { version = "1.2.0", default-features = false }
http-body-util = { version = "0.1.2", default-features = false }
hyper = { version = "1.5.2", default-features = false, features = ["full"] }
hyper-rustls = { version = "0.27.5", default-features = false, features = ["rustls-native-certs"] }
hyper-util = { version = "0.1.10", default-features = false, features = ["client", "http1", "http2", "server"] }
indexmap = { version = "2.7.0", default-features = false, features = ["serde"] }
inventory = { version = "0.3.17", default-features = false }
ipnet = { version = "2.10.1", default-features = false, features = ["std"] }
listenfd = { version = "1.0.1", default-features = false, optional = true }
libc = { version = "0.2.169", default-features = false }
log_schema = { path = "../log_schema" }
bytesize = { path = "../bytesize" }
memchr = { version = "2.7.4", default-features = false }
metrics = { path = "../metrics" }
pem = { version = "3.0.4", default-features = false, features = ["std"] }
percent-encoding = { version = "2.3.1", default-features = false }
pin-project-lite = { version = "0.2.16", default-features = false }
pkcs8 = { version = "0.10.2", default-features = false, features = ["pkcs5", "std", "encryption"] }
regex = { version = "1.11.1", default-features = false }
rustls = { version = "0.23.21", default-features = false, features = ["ring"] }
smallvec = { version = "1.13.2", default-features = false }
serde = { version = "1.0.217", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.135", default-features = false }
serde_yaml = { version = "0.9.34", default-features = false }
snap = { version = "1.1.1", default-features = false }
socket2 = { version = "0.5.8", default-features = false }
thiserror = { version = "2.0.10", default-features = false }
tokio = { version = "1.43.0", default-features = false, features = ["time", "net", "signal", "fs", "rt-multi-thread"] }
tokio-rustls = { version = "0.26.1", default-features = false }
tokio-stream = { version = "0.1.17", default-features = false, features = ["net", "sync"] }
tokio-util = { version = "0.7.13", default-features = false, features = ["time"] }
tower = { version = "0.5.2", default-features = false, features = ["limit", "retry", "timeout"] }
tracing = { version = "0.1.41", default-features = false }
tracing-core = { version = "0.1.33", default-features = false }
tracing-internal = { path = "../tracing-internal" }
tracing-futures = { version = "0.2.5", default-features = false, features = ["std-future"] }
tracing-limit = { path = "../tracing-limit" }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "json", "fmt", "ansi"] }
tripwire = { path = "../tripwire" }
twox-hash = { version = "2.1.0", default-features = false, features = ["xxhash64"] }
typetag = { version = "0.2.19" }
url = { version = "2.5.4", features = ["serde"] }
zstd = { version = "0.13.2", default-features = false }
