[package]
name = "framework"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []

test-util = []
tokio-console = ["console-subscriber", "tokio/tracing"]

[dev-dependencies]
event = { path = "../event", features = ["test"] }
proptest = { version = "1.10.0", default-features = false, features = ["std"] }
rand = { version = "0.10.0", default-features = false }
rand_distr = { version = "0.6.0", default-features = false }
testify = { path = "../testify" }
tokio = { version = "1.49.0", default-features = false, features = ["test-util"] }
tokio-test = { version = "0.4.5", default-features = false }
tower-test = { version = "0.4.0", default-features = false }

[dependencies]
async-stream = { version = "0.3.6" }
async-trait = { version = "0.1.89", default-features = false }
backoff = { path = "../backoff" }
base64 = { version = "0.22.1", default-features = false }
buffer = { path = "../buffer" }
bytes = { version = "1.11.1", default-features = false }
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
chrono-tz = { version = "0.10.4", default-features = false }
codecs = { path = "../codecs" }
configurable = { path = "../configurable" }
console-subscriber = { version = "0.5.0", optional = true }
dyn-clone = { version = "1.0.20", default-features = false }
event = { path = "../event" }
# TODO: framework should not exit if any error happened
exitcode = { version = "1.1.2" }
flate2 = { version = "1.1.9" }
futures = { version = "0.3.32", default-features = false, features = ["async-await"] }
glob = { version = "0.3.3", default-features = false }
headers = { version = "0.4.1", default-features = false }
humanize = { git = "https://github.com/f1shl3gs/humanize", default-features = false, features = ["duration", "bytes", "serde"], rev = "29e9225d05de76c6d48134497aa4a94c2cd08380" }
hostname = { path = "../hostname" }
http = { version = "1.4.0", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }
hyper = { version = "1.8.1", default-features = false, features = ["full"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["rustls-native-certs"] }
hyper-util = { version = "0.1.20", default-features = false, features = ["client", "http1", "http2", "server"] }
indexmap = { version = "2.13.0", default-features = false, features = ["serde"] }
inventory = { version = "0.3.21", default-features = false }
ipnet = { version = "2.11.0", default-features = false }
listenfd = { version = "1.0.2", default-features = false }
libc = { version = "0.2.182", default-features = false }
log_schema = { path = "../log_schema" }
metrics = { path = "../metrics" }
pem = { version = "3.0.6", default-features = false, features = ["std"] }
percent-encoding = { version = "2.3.2", default-features = false }
pin-project-lite = { version = "0.2.16", default-features = false }
pkcs8 = { version = "0.10.2", default-features = false, features = ["pkcs5", "std", "encryption"] }
rand = { version = "0.10.0", default-features = false }
regex = { version = "1.12.3", default-features = false }
resolver = { path = "../resolver" }
rustls = { version = "0.23.36", default-features = false, features = ["ring"] }
rustls-native-certs = { version = "0.8.3", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.149", default-features = false }
serde_yaml = { git = "https://github.com/f1shl3gs/serde-yaml.git", rev = "62dea63989d8bfd09a9453fa957605dcf09aa4a7", default-features = false }
snap = { version = "1.1.1", default-features = false }
socket2 = { version = "0.6.2", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
tokio = { version = "1.49.0", default-features = false, features = ["time", "net", "signal", "rt-multi-thread"] }
tokio-rustls = { version = "0.26.4", default-features = false }
tokio-stream = { version = "0.1.18", default-features = false, features = ["net", "sync"] }
tokio-util = { version = "0.7.18", default-features = false, features = ["time"] }
tower = { version = "0.5.3", default-features = false, features = ["limit", "retry", "timeout"] }
tracing = { version = "0.1.44", default-features = false }
tracing-core = { version = "0.1.36", default-features = false }
tracing-internal = { path = "../tracing-internal" }
tracing-limit = { path = "../tracing-limit" }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["env-filter", "json", "fmt", "ansi"] }
tripwire = { path = "../tripwire" }
twox-hash = { version = "2.1.2", default-features = false, features = ["xxhash64"] }
typesize = { path = "../typesize" }
typetag = { version = "0.2.21" }
value = { path = "../value" }
zstd = { version = "0.13.3", default-features = false }
