[package]
name = "humanize"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "duration"
harness = false
path = "benches/duration.rs"

[dev-dependencies]
criterion = { version = "0.3.5" }

[dependencies]
snafu = { version = "0.6.10" }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.132", default-features = false, features = ["std"] }