[package]
name = "humanize"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "duration"
harness = false
path = "benches/duration.rs"

[dev-dependencies]
criterion = { version = "0.3.5" }

[dependencies]
snafu = { version = "0.6.10" }
serde = { version = "1.0.136", default-features = false, features = ["std"] }