[package]
name = "hyper-unix"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.6.0", default-features = false, features = ["client"] }
hyper-util = { version = "0.1.13", default-features = false, features = ["client"] }
pin-project-lite = { version = "0.2.16", default-features = false }
tokio = { version = "1.45.1", default-features = false }
tower = { version = "0.5.2", default-features = false }
