[package]
name = "internal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics = { version = "0.17.0" }
metrics-util = { version = "0.10.1" }
event = { path = "../event" }
once_cell = { version = "1.8.0" }