[package]
name = "jaeger"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[build-dependencies]
tonic-build = { version = "0.10.2", default-features = false, features = ["prost"] }

[dependencies]
base64 = { version = "0.21.5", default-features = false }
event = { path = "../event" }
prost = { version = "0.12.1", default-features = false }
prost-types = { version = "0.12.1", default-features = false }
thrift = { version = "0.17.0", default-features = false }
tonic = { version = "0.10.2", default-features = false }
