[package]
name = "jaeger"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[build-dependencies]
tonic-build = { version = "0.13.1", default-features = false, features = ["prost"] }

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
event = { path = "../event" }
prost = { version = "0.13.5", default-features = false }
prost-types = { version = "0.14.1", default-features = false }
thrift = { version = "0.17.0", default-features = false }
tonic = { version = "0.13.1", default-features = false, features = ["codegen", "prost", "transport"] }
