[package]
name = "kubernetes"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dev-dependencies]
tokio = { version = "1.44.2", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt"] }

[dependencies]
base64 = { version = "0.22.1", default-features = false }
bytes = { version = "1.10.1", default-features = false }
form_urlencoded = { version = "1.2.1", default-features = false, features = ["alloc"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false, features = ["std"] }
serde_yaml = { version = "0.9.34", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
tokio-util = { version = "0.7.15", default-features = false, features = ["codec", "io"] }
tracing = { version = "0.1.41", default-features = false }

# TLS
pem = { version = "3.0.5", default-features = false, features = ["std"] }
rustls = { version = "0.23.26", default-features = false, features = ["ring"] }
rustls-native-certs = { version = "0.8.1", default-features = false }

# Future
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }

# HTTP
headers = { version = "0.4.0", default-features = false }
http = { version = "1.3.1", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }
hyper = { version = "1.6.0", default-features = false }
hyper-util = { version = "0.1.11", default-features = false, features = ["client-legacy", "http1"] }
hyper-rustls = { version = "0.27.5", default-features = false, features = ["http1", "rustls-native-certs"] }
