[package]
name = "kubernetes"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dev-dependencies]
tokio = { version = "1.49.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt"] }

[dependencies]
base64 = { version = "0.22.1", default-features = false }
bytes = { version = "1.11.1", default-features = false }
form_urlencoded = { version = "1.2.2", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
serde_yaml = { git = "https://github.com/f1shl3gs/serde-yaml.git", rev = "62dea63989d8bfd09a9453fa957605dcf09aa4a7", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
tokio-util = { version = "0.7.18", default-features = false, features = ["codec", "io"] }
tracing = { version = "0.1.44", default-features = false }

# TLS
pem = { version = "3.0.6", default-features = false, features = ["std"] }
rustls = { version = "0.23.36", default-features = false, features = ["ring"] }
rustls-native-certs = { version = "0.8.3", default-features = false }

# Future
futures = { version = "0.3.32", default-features = false, features = ["alloc"] }

# HTTP
headers = { version = "0.4.1", default-features = false }
http = { version = "1.4.0", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }
hyper = { version = "1.8.1", default-features = false }
hyper-util = { version = "0.1.20", default-features = false, features = ["client-legacy", "http1"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http1", "rustls-native-certs"] }
