[package]
name = "log_schema"
version = "0.1.0"
edition = "2021"

[dependencies]
# std::lazy::OnceCell is still unstable, and this dependencies should be removed once std::lazy::OnceCell become stable
once_cell = { version = "1.9.0" }
serde = { version = "1.0.133", default-features = false }
lazy_static = { version = "1.4.0" }