[package]
name = "log_schema"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# std::lazy::OnceCell is still unstable, and this dependencies should be removed once std::lazy::OnceCell become stable
once_cell = { version = "1.17.1" }
serde = { version = "1.0.159", default-features = false }