[package]
name = "lookup"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "lookup"
path = "benches/lookup.rs"
harness = false
test = false
required-features = []

[dependencies]
configurable = { path = "../configurable" }
serde = { version = "1.0.187", default-features = false }

[dev-dependencies]
serde_json = { version = "1.0.105" }
criterion = { version = "0.5.1", default-features = false, features = ["html_reports"] }