[package]
name = "metrics"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
parking_lot = { version = "0.12.1", default-features = false }
once_cell = { version = "1.18.0" }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }

[[bench]]
name = "register"
harness = false