[package]
name = "multiline"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
tokio = { version = "1.38.0", default-features = false, features = ["test-util", "macros"] }
serde_json = { version = "1.0.120", default-features = false }
serde_yaml = { version = "0.9.34", default-features = false }

[dependencies]
bytes = { version = "1.6.1", default-features = false }
futures = { version = "0.3.30", default-features = false }
humanize = { git = "https://github.com/f1shl3gs/humanize", default-features = false, features = ["duration", "serde"], rev = "3ce391414e9417c36ca386b50ef82e6d2e1882dd" }
pin-project-lite = { version = "0.2.14" }
regex = { version = "1.10.5", default-features = false }
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.120", default-features = false }
tokio-util = { version = "0.7.11", default-features = false, features = ["codec", "time"] }
