[package]
name = "netlink-packet-conntrack"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netlink-sys = { version = "0.7.0" }
netlink-packet-core = { version = "0.2.4" }
netlink-packet-utils = { version = "0.4.1" }
bitflags = { version = "1.2.1" }