[package]
name = "ntp"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
tokio = { version = "1.49.0", default-features = false, features = ["net", "rt-multi-thread", "macros"] }

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["now"] }
rand = { version = "0.10.0", default-features = false, features = ["std_rng", "std"] }
tokio = { version = "1.49.0", default-features = false, features = ["net"] }
