[package]
name = "procfs"
version = "0.1.0"
edition = "2021"
publish = false
exclude = ["fixtures"]

[dev-dependencies]
tokio = { version = "1.15.0", features = ["fs", "io-util", "test-util", "macros"] }

[dependencies]
futures = { version = "0.3.19" }
glob = { version = "0.3.0" }
libc = { version = "0.2.112" }
tokio = { version = "1.15.0", features = ["fs", "io-util"] }