[package]
name = "procfs"
version = "0.1.0"
edition = "2021"
publish = false
exclude = ["fixtures"]

[dev-dependencies]
tokio = { version = "1.15.0", features = ["fs", "io-util", "test-util", "macros"] }
tempfile = { version = "3.2.0" }

[dependencies]
futures = { version = "0.3.19" }
glob = { version = "0.3.0" }
lazy_static = { version = "1.4.0" }
libc = { version = "0.2.112" }
regex = { version = "1.5.4"}
tokio = { version = "1.15.0", features = ["fs", "io-util", "rt"] }
nom = { version = "7.1.0", default-features = false }
