[package]
name = "prometheus"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
prost = { version = "0.12.1", default-features = false, features = ["prost-derive"] }
indexmap = { version = "2.1.0", default-features = false }

[build-dependencies]
prost-build = { version = "0.12.1", default-features = false }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
indexmap = { version = "2.1.0", default-features = false, features = ["std"] }

[lib]
bench = false

[[bench]]
name = "parse_text"
harness = false