[package]
name = "prometheus"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
prost = { version = "0.13.5", default-features = false, features = ["prost-derive"] }
indexmap = { version = "2.10.0", default-features = false }

[build-dependencies]
prost-build = { version = "0.13.5", default-features = false }

[dev-dependencies]
criterion = { version = "0.6.0", default-features = false }
indexmap = { version = "2.10.0", default-features = false, features = ["std"] }

[lib]
bench = false

[[bench]]
name = "parse_text"
harness = false