[package]
name = "prometheus"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
prost = { version = "0.14.3", default-features = false, features = ["derive"] }
indexmap = { version = "2.13.0", default-features = false }

[build-dependencies]
prost-build = { version = "0.14.3", default-features = false }

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false }
indexmap = { version = "2.13.0", default-features = false, features = ["std"] }

[lib]
bench = false

[[bench]]
name = "parse_text"
harness = false