[package]
name = "resolver"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
tokio = { version = "1.49.0", default-features = false, features = ["macros", "rt-multi-thread"]}

[dependencies]
libc = { version = "0.2.182", default-features = false }
rand = { version = "0.10.0", default-features = false, features = ["thread_rng"] }
tokio = { version = "1.49.0", default-features = false, features = ["io-util", "net", "sync", "time"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", default-features = false, features = ["Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock"] }
