[package]
name = "tail"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { version = "1.11.1", default-features = false }
futures = { version = "0.3.32", default-features = false }
memchr = { version = "2.8.0", default-features = false, features = ["alloc"] }
pin-project-lite = { version = "0.2.17", default-features = false }
tokio = { version = "1.51.1", default-features = false, features = ["net", "rt", "sync", "time"] }
tokio-util = { version = "0.7.18", default-features = false, features = ["codec"]}
tracing = { version = "0.1.44", default-features = false }

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2.185", default-features = false }

[dev-dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["now"] }
humanize = { git = "https://github.com/f1shl3gs/humanize", default-features = false, features = ["bytes"], rev = "84cfd7acea8e3c69512a2f33496641a92efaff66" }
rand = { version = "0.10.1", default-features = false, features = ["thread_rng"] }
temp-dir = { version = "0.2.0", default-features = false }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["fmt"] }
tokio = { version = "1.51.1", default-features = false, features = ["signal", "macros"] }
