[package]
name = "testify"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
event = { path = "../event" }
hyper = { version = "1.5.2", default-features = false, features = ["full"] }
http-body-util = { version = "0.1.2", default-features = false }
futures = { version = "0.3.31", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
rand = { version = "0.9.0", default-features = false }
tokio = { version = "1.43.0", default-features = false, features = ["io-util", "net", "time", "fs"] }
tokio-util = { version = "0.7.13", default-features = false }
